Bug 1648850: Fix title for notifications overlaping compose button behatnotneeded: style change only Change-Id: If024c6ec5c8f5a707db12c9c4a6afb56d72dc8b6

--- a/htdocs/theme/raw/sass/typography/_typography.scss
+++ b/htdocs/theme/raw/sass/typography/_typography.scss
@@ -18,6 +18,11 @@ h1 {
     }
 }
 
+#notifications-page-header {
+    @extend .page-header;
+    clear: both;
+}
+
 // Add padding if there is no navigation
 .header + .container h1 {
     padding-top: 20px;
